--- a/styles/scss/app.scss
+++ b/styles/scss/app.scss
@@ -1,42 +1,88 @@
 /*!
- * SASS
- * Sass makes CSS fun!
- * https://sass-lang.com
- * https://github.com/sass/sass
+ * bootstrap-npm-starter
+ * https://github.com/twbs/bootstrap-npm-starter
  *
  */
 
-// // SAMPLE
-// $font-stack: Helvetica, sans-serif;
-// $primary-color: #333;
+// Override Bootstrap's Sass default variables
+//
+// Nearly all variables in Bootstrap are written with the `!default` flag.
+// This allows you to override the default values of those variables before
+// you import Bootstrap's source Sass files.
+//
+// Overriding the default variable values is the best way to customize your
+// CSS without writing _new_ styles. For example, change you can either change
+// `$body-color` or write more CSS that override's Bootstrap's CSS like so:
+// `body { color: red; }`.
 
-// body {
-//   font: 100% $font-stack;
-//   color: $primary-color;
-// }
 
-// @mixin border-radius($radius) {
-//   -webkit-border-radius: $radius;
-//      -moz-border-radius: $radius;
-//       -ms-border-radius: $radius;
-//           border-radius: $radius;
-// }
+//
+// Bring in Bootstrap
+//
 
-// nav {
-//   ul {
-//     margin: 0;
-//     padding: 0;
-//     list-style: none;
-//   }
+// Option 1
+//
+// Import all of Bootstrap's CSS
 
-//   li { @include border-radius(10px); }
+// @import "bootstrap/scss/bootstrap";
 
-//   a {
-//     display: block;
-//     padding: 6px 12px;
-//     text-decoration: none;
-//   }
-// }
+// Option 2
+//
+// Place variable overrides first, then import just the styles you need. Note that some stylesheets are required no matter what.
+@import "override-variables";
 
-@import "variables";
-@import "~bootstrap/scss/bootstrap";
+// Required
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/mixins";
+@import "bootstrap/scss/utilities";
+@import "bootstrap/scss/root";
+@import "bootstrap/scss/reboot";
+
+@import "bootstrap/scss/type";
+// @import "bootstrap/scss/images";
+@import "bootstrap/scss/containers";
+@import "bootstrap/scss/grid";
+// @import "bootstrap/scss/tables";
+// @import "bootstrap/scss/forms";
+@import "bootstrap/scss/buttons";
+@import "bootstrap/scss/transitions";
+@import "bootstrap/scss/dropdown";
+// @import "bootstrap/scss/button-group";
+// @import "bootstrap/scss/nav";
+// @import "bootstrap/scss/navbar"; // Requires nav
+// @import "bootstrap/scss/card";
+// @import "bootstrap/scss/breadcrumb";
+// @import "bootstrap/scss/accordion";
+// @import "bootstrap/scss/pagination";
+// @import "bootstrap/scss/badge";
+// @import "bootstrap/scss/alert";
+// @import "bootstrap/scss/progress";
+// @import "bootstrap/scss/list-group";
+@import "bootstrap/scss/close";
+// @import "bootstrap/scss/toasts";
+@import "bootstrap/scss/modal"; // Requires transitions
+// @import "bootstrap/scss/tooltip";
+// @import "bootstrap/scss/popover";
+// @import "bootstrap/scss/carousel";
+// @import "bootstrap/scss/spinners";
+@import "bootstrap/scss/offcanvas"; // Requires transitions
+// @import "bootstrap/scss/placeholders";
+
+// Helpers
+// @import "helpers";
+
+// Utilities
+@import "bootstrap/scss/utilities/api";
+
+
+//
+// Custom styles
+//
+
+@import "globals";
+
+// Style Bootstrap icons
+.bi {
+    fill: currentColor;
+}
