--- a/styles/scss/app.scss
+++ b/styles/scss/app.scss
@@ -70,7 +70,7 @@
 // @import "bootstrap/scss/placeholders";
 
 // Helpers
-// @import "helpers";
+// @import "bootstrap/scss/helpers";
 
 // Utilities
 @import "bootstrap/scss/utilities/api";
